--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name"         : "node-web-scrape",
+  "name"         : "node-cheerio-web-page-scraper",
   "version"      : "0.0.1",
-  "description"  : "Scrape le web.",
+  "description"  : "Provides metadata and image info for any web page as JSON",
   "main"         : "server.js",
-  "author"       : "Scotch",
+  "author"       : "Kevin Chisholm",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies" : {
     "express"    : "latest",
     "request"    : "latest",
     "cheerio"    : "latest",
-    "node-schedule" : "latest",
     "body-parser": "^1.15.2"
   }
 }
